RESOLVED FIXED 263808
[iOS] A scrollTo() followed by an animated scroll ends at the wrong scroll position
https://bugs.webkit.org/show_bug.cgi?id=263808
Summary [iOS] A scrollTo() followed by an animated scroll ends at the wrong scroll po...
Simon Fraser (smfr)
Reported 2023-10-27 16:20:51 PDT
We were failing to handle the case where an animated scroll happens after a non-animated scroll.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-27 16:21:21 PDT
Simon Fraser (smfr)
Comment 2 2023-10-27 16:25:57 PDT
EWS
Comment 3 2023-10-28 16:47:44 PDT
Committed 269897@main (9b87cf844c2f): <https://commits.webkit.org/269897@main> Reviewed commits have been landed. Closing PR #19663 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.